# Autonomus_Driving

./: CMakeLists.txt  README.md  package.xml
bzvz/: aaa.cpp
bzvz/test1/: main.cpp
bzvz/test2/: speedL.cpp
bzvz/test3/: STOPtest_det.cpp  test_det.cpp
bzvz/test4/: LabelData.yml  TrainingData.yml  project.cpp  trainDigits.cpp
cascade/: speed_limit.xml
cascade/speed_limit/: pos.lst
cascade/speed_limit/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascade/speed_limit_40/: neg.lst  pos.lst  pos_samples.vec
cascade/speed_limit_40/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage2.xml
cascade/speed_limit_80/: neg.lst  pos.lst  pos_samples.vec
cascade/speed_limit_80/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascade/speed_limit_nova/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascade/speed_limit_signs/: neg.lst  pos_samples.vec
cascade/speed_limit_signs/classifier/: cascade.xml  cascade_80.xml  stage11.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage8.xml
cascade/stop_sign/classifier/: cascade.xml  log.txt  stage0.xml  stage10.xml  stage13.xml  stage3.xml  stage4.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
classifiers/classifier/: stage1.xml  stage11.xml  stage12.xml  stage14.xml  stage2.xml  stage5.xml
classifiers/stop_classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
demo/: LaneDet.cpp
doc/: bachelor - serbian cyrlic.docx  bachelor - serbian latin.docx  presentation - serbian cyrlic.pptx
doc/flow charts/: Camera Simulator Node work algorithm.dia  Camera Simulator flow chart (ENG).dia  Camera Simulator flow chart (SRP).dia  ECU flow chart (SRP).dia  NodeRelations.dia  Visualizer flow chart (SRP).dia  Watchdog flow chart (ENG).dia  Watchdog flow chart (SRP).dia
help_programs/: detectionTest.cpp  lineDet.cpp  saveVideo.cpp
include/bachelor/: CameraCalibration.h  CameraSimulator.hpp  Detector.hpp  DetectorNode.hpp  Display.hpp  ECU.hpp  Frame.h  IObserver.hpp  NodeName.h  Topic.h  TopicName.h  Topics.h  Watchdog.hpp
include/bachelor/CameraSimulator/: CameraSimulator.hpp
include/bachelor/DataProtocol/: BoolDataEmiter.hpp  BoolDataReceiver.hpp  DataReceiver.hpp  DataSender.hpp  FrameDataEmiter.hpp  FrameDataReceiver.hpp  IBoolDataEmiter.hpp  IBoolDataReceiver.hpp  IDataReceiver.hpp  IDataSender.hpp  IFrameDataEmiter.hpp  IFrameDataReceiver.hpp  IPlatformRcv.hpp  IReceiver.hpp  ISender.hpp  PlatformRcv.hpp  PlatformRcvBool.hpp  PlatformRcvCoord.hpp  PlatformRcvImage.hpp  PlatformRcvLog.hpp  PlatformRcvString.hpp  Receiver.hpp  Sender.hpp
include/bachelor/DataReceiver/: DataReceiver.hpp  IDataReceiver.hpp
include/bachelor/DataSender/: DataSender.hpp  IDataSender.hpp
include/bachelor/Detector/: Detector.hpp  DetectorNode.hpp
include/bachelor/Dipslay_node/: Display.hpp
include/bachelor/Display/: Display.hpp
include/bachelor/DisplayNode/: Display.hpp
include/bachelor/DrawAndDisplay/: DrawAndDisplay.hpp
include/bachelor/ImageProcessor/: IImageProcessor.hpp  LaneProcessor.hpp  (+5 more)
launch/: final.launch  project.launch
msg/: Coordinates.msg  ECU_Report.msg  Log.msg
node/: CameraSimulatorNode.cpp  DisplayNode.cpp  Display_node.cpp  DrawAndDisplayNode.cpp  ECUNode.cpp  ObjectDetectorNode.cpp  ObjectDetector_node.cpp  TimerNode.cpp  Timer_node.cpp  VideoPlayerNode.cpp  VideoPlayer_node.cpp  VisualizerNode.cpp  WatchdogNode.cpp  Watchdog_node.cpp  speed_limit.cpp
node/detector_cluster/: LaneDetectorNode.cpp  LimitDetectorNode.cpp  StopDetectorNode.cpp
node/test/: SpeedOCR.cpp  colorSegmentation.cpp  detectionTest.cpp  laneDet.cpp  saveFrames.cpp
src/: CameraCalibration.cc  CameraSimulator.cpp  Detector.cpp  DetectorNode.cpp  Display.cpp  ECU.cpp  NodeName.cc  TopicName.cc  Topics.cpp  Watchdog.cpp
src/CameraSimulator/: CameraSimulator.cpp
src/DataProtocol/: BoolDataEmiter.cpp  BoolDataReceiver.cpp  DataReceiver.cpp  DataSender.cpp  FrameDataEmiter.cpp  FrameDataReceiver.cpp  PlatformRcv.cpp  PlatformRcvBool.cpp  PlatformRcvCoord.cpp  PlatformRcvImage.cpp  PlatformRcvLog.cpp  PlatformRcvString.cpp  Receiver.cpp  Sender.cpp
src/DataReceiver/: DataReceiver.cpp
src/DataSender/: DataSender.cpp
src/Detector/: Detector.cpp  DetectorNode.cpp
src/Display/: Display.cpp
src/DisplayNode/: Display.cpp
src/Display_node/: Display.cpp
src/DrawAndDisplay/: DrawAndDisplay.cpp
src/ImageProcessor/: LaneProcessor.cpp  LimitProcessor.cpp  RoadLaneProcessor.cpp  SpeedLimitProcessor.cpp  StopProcessor.cpp
src/ObjectDetectorNode/: ImageProcessor.cpp  ObjectDetector.cpp  RoadLaneProcessor.cpp  SpeedLimitProcessor.cpp  StopSignProcessor.cpp
src/ObjectDetector_node/: ImageProcessor.cpp  ObjectDetector.cpp
src/TimerNode/: Timer.cpp
src/Timer_node/: Timer.cpp
src/VideoPlayerNode/: VideoPlayer.cpp
src/VideoPlayer_node/: VideoPlayer.cpp
src/Visualizer/: LaneVisualizer.cpp  LogVisualizer.cpp  ObjectVisualizer.cpp  Visualizer.cpp
src/Watchdog/: Watchdog.cpp
src/WatchdogNode/: Watchdog.cpp
src/Watchdog_node/: Watchdog.cpp
test/: DisplayTest.cpp
test/Visualizer/: LaneVisualizerTest.cpp  ObjectVisualizerTest.cpp
test_launch/: DisplayTest.test
test_launch/Visualizer/: LaneVisualizerTest.test  ObjectVisualizerTest.test
test_node/: circleDet.cpp  detectionTest.cpp  help.cpp
(+31 files in other folders)
